--- a/pom.xml
+++ b/pom.xml
@@ -53,9 +53,11 @@
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.4.1</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
